# stock_trading

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes_health.py
app/backtest/: engine.py  reporter.py  resampler.py
app/bot/: chart.py  formatters.py  handlers.py  keyboards.py  telegram_bot.py
app/brokers/kiwoom/: account.py  auth.py  client.py  market_data.py  order.py  rate_limiter.py
app/core/: config.py  constants.py  exceptions.py  types.py
app/execution/: conflict_resolver.py  engine.py
app/market/: bars.py  calendar.py  indicators.py  master.py  stock_pool.py  universe.py
app/monitoring/: alerts.py  health.py  logger.py
app/portfolio/: manager.py  position_sizer.py
app/recovery/: startup_check.py
app/risk/: drawdown.py  kill_switch.py  manager.py
app/scanners/: base.py  dsl.py  scoring.py
app/scheduler/: jobs.py  runner.py
app/simulation/: cost_model.py
app/storage/: database.py  models.py
app/strategies/: base.py  low_volatility_trend.py  mean_reversion.py  momentum_breakout.py  multi_factor.py  pullback_trend.py  registry.py
docs/: development_spec.md  kiwoom_rest_mock_quant_autotrading_plan.md  verification_plan.md
scripts/: run_scanner.py  run_telegram.py  verify_integration.py
tests/: conftest.py  test_phase1.py  test_phase5.py  test_phase6.py
tests/backtest/: test_backtest.py
tests/brokers/: test_auth.py  test_client.py  test_rate_limiter.py
tests/market/: test_indicators.py  test_universe.py
tests/scanners/: test_scanners.py
tests/strategies/: test_strategies.py
(+7 files in other folders)
